# autopilot

./: .gitignore  Cargo.toml  README.md  autopilot.schema.json  autopilot.schema.json.license  rustftmt.toml
docs/: config.md
examples/: basic.yaml
src/: app.rs  config.rs  event.rs  main.rs  session.rs  tui.rs  ui.rs  widget.rs
