[package]
name = "autodemo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
serde_json = "1.0.140"
jsonschema = "0.29.0"
ratatui = "0.29.0"
serde = "1.0.218"
yaml-rust2 = "0.10.0"
serde_yaml2 = "0.1.2"
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"
tokio-macros = "2.5.0"
